# ResearchAgent

./: .gitignore  README.md
deepresearch/backend/: .env.example  docker-compose.pgvector.yml  pyproject.toml
deepresearch/backend/benchmarks/v1/: README.md  cases.jsonl
deepresearch/backend/paper_assistant/: .env.example  AGENT_INTEGRATION_PLAN.md  DECISIONS.md  EXPERIMENT_LOG.md  MEMORY_PLAN.md  README.md  TODO_NEXT.md
deepresearch/backend/paper_assistant/app/: citation_retriever.py  config.py  document_loader.py  llm_client.py  local_library_tools.py  metadata_store.py  models.py  pgvector_chunk_store.py  rerank_client.py  simple_vector_rag.py  utils.py
deepresearch/backend/paper_assistant/outputs/: retrieval_eval_20q_after_expansion.json  retrieval_eval_20q_dual_query.json  retrieval_eval_after_pdf_cleanup.json  retrieval_eval_after_title_rerank.json
deepresearch/backend/paper_assistant/scripts/: build_simple_index.py  evaluate_retrieval.py  ingest_documents.py  list_documents.py  query_documents.py  topic_summary.py
deepresearch/backend/scripts/: run_benchmark.py  score_benchmark.py
deepresearch/backend/src/: ARIS_MINIMAL_ALIGNMENT.md  CODE_READING_NOTES.md  LANGCHAIN_LANGGRAPH_MIGRATION_PLAN.md  PROJECT_ITERATION_PLAN.md  agent.py  benchmarking.py  capability_types.py  config.py  main.py  models.py  prompts.py  source_types.py
deepresearch/backend/src/agent_runtime/: factory.py  interfaces.py  langchain_agent.py  note_tool.py  roles.py  search_adapter.py  tool_protocol.py
deepresearch/backend/src/execution/: __init__.py  evidence_policy.py  models.py  (+2 more)
deepresearch/backend/tests/: test_benchmarking.py  test_evidence_policy.py  test_file_memory_service.py  test_github_mcp.py  test_memory_service.py  test_paper_assistant_rerank.py  test_project_workspace.py  test_research_task_executor.py  test_search_dispatch.py  test_source_adapters.py  test_source_routing.py  test_special_mode_executor.py
(+94 files in other folders)
