[project]
name = "helloagents-deep-researcher"
version = "0.0.1"
description = "Fully local web research and summarization assistant powered by HelloAgents."
authors = [
    { name = "Lance Martin" }
]
readme = { text = "ResearchAgent backend service.", content-type = "text/plain" }
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain>=1.2.13",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.0.1",
    "langgraph>=1.1.3",
    "mcp>=1.27.0",
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
    "tavily-python>=0.5.0",
    "python-dotenv==1.0.1",
    "requests>=2.31.0",
    "openai>=1.12.0",
    "psycopg[binary]>=3.2.1",
    "uvicorn[standard]>=0.32.0",
    "ddgs>=9.6.1",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "agent_runtime",
    "execution",
    "graph",
    "llm",
    "orchestrator",
    "project_workspace",
    "services",
]
py-modules = [
    "agent",
    "benchmarking",
    "capability_types",
    "config",
    "main",
    "models",
    "prompts",
    "source_types",
    "utils",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
